# onboarding_project

./: db.sqlite3  pyproject.toml
project/: settings.py  urls.py
project_api/: admin.py  models.py  serializers.py  views.py
project_api/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_rename_datedue_installments_datedue_and_more.py  0004_loan_number_of_installments.py  0005_remove_loan_number_of_installments.py  0006_installments_amount.py  0007_alter_installments_datedue.py  0008_alter_installments_amount.py  0009_alter_installments_datedue.py  0010_alter_installments_datedue.py  0011_alter_installments_datedue.py  0012_alter_installments_datedue.py  0013_loan_user.py  0014_remove_loan_user_user_loan_alter_loan_status.py  0015_alter_bankaccount_balance.py  0016_remove_user_loan_loan_user.py
project_api/tests/: __init__.py  test_flow.py
