[tool.poetry]
name = "onboarding-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "onboarding_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
